// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadCellSets action Dispatches a loaded action when run with the initial state. 1`] = `
Array [
  Object {
    "type": "cellSets/loading",
  },
  Object {
    "payload": Object {
      "data": Object {
        "cellIds": Object {},
        "color": "#ff0000",
        "name": "one",
      },
      "experimentId": "1234",
    },
    "type": "cellSets/loaded",
  },
]
`;

exports[`loadCellSets action Dispatches an error condition if fetch fails 1`] = `
Array [
  Object {
    "type": "cellSets/loading",
  },
  Object {
    "payload": Object {
      "error": "We couldn't get the list of cell sets.",
    },
    "type": "cellSets/error",
  },
]
`;

exports[`loadCellSets action Dispatches on initial load pending false and error state 1`] = `
Array [
  Object {
    "type": "cellSets/loading",
  },
  Object {
    "payload": Object {
      "data": Object {
        "cellIds": Object {},
        "color": "#ff0000",
        "name": "one",
      },
      "experimentId": "1234",
    },
    "type": "cellSets/loaded",
  },
]
`;
